# ParrotOS

./: pyproject.toml  setting.sh
