[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypykatz = "^0.6.10"
crackmapexec = {git = "https://github.com/byt3bl33d3r/CrackMapExec.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
